fixed the mistake changing gap on hero buttons

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -120,7 +120,10 @@ p {
   transition: all 0.3s ease-in-out;
   @media (max-width: 1000px) {
     text-align: start;
-    padding: .7rem 1.5rem;
+    padding: 0.7rem 1.5rem;
+  }
+  @media (max-width: 310px) {
+    padding: 0.7rem 1rem;
   }
 }
 .hero__arrow__buttons button:hover {
